@@ -1,0 +1,23 @@
+// Copyright (C) 2004 Johan Hoffman and Anders Logg.
+// Licensed under the GNU GPL Version 2.
+
+#include <dolfin/constants.h>
+#include <dolfin/Matrix.h>
+#include <dolfin/PDE.h>
+
+namespace dolfin
+{
+
+  /// The standard stiffness matrix for homogeneous Neumann
+  /// boundary conditions on a given mesh.
+
+  class StiffnessMatrix : public Matrix
+  {
+  public:
+  
+    /// Construct a stiffness matrix for a given mesh
+    StiffnessMatrix(Mesh& mesh, real epsilon = 1.0);
+
+  };
+
+}
