@@ -24,19 +24,19 @@ namespace dolfin {
     
     real lhs(const ShapeFunction& u, const ShapeFunction& v)
     {
-      return (u*v + k*((b,grad(u))*v + a*(grad(u),grad(v)))) * dK;
+      return (u*v + k*((b,grad(u))*v + a*(grad(u),grad(v)))) * dx;
     }
     
     real rhs(const ShapeFunction& v)
     {
-      return (up(0)*v + k*f*v) * dK;
+      return (up(0)*v + k*f*v) * dx;
     }
     
   private:    
-    ElementFunction f;         // Source term
-    ElementFunction::Vector up;        // Function value at left end-point
-    ElementFunction a;         // Diffusivity
-    ElementFunction::Vector b; // Convection
+    ElementFunction f;          // Source term
+    ElementFunction::Vector up; // Function value at left end-point
+    ElementFunction a;          // Diffusivity
+    ElementFunction::Vector b;  // Convection
   };
 
 }
