@@ -22,12 +22,12 @@ namespace dolfin {
     
     real lhs(const ShapeFunction& u, const ShapeFunction& v)
     {
-      return (u*v + a*(grad(u),grad(v))) * dK;
+      return (u*v + a*(grad(u),grad(v))) * dx;
     }
     
     real rhs(const ShapeFunction& v)
     {
-      return (up*v + k*f*v) * dK;
+      return (up*v + k*f*v) * dx;
     }
     
   private:    
